# fluoscenepy

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  build_api_dict_pdoc.bat  build_api_dict_pdoc.cmd  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
docs/: doc_page_styles.css  index.html  page_fl_proj_script.js
docs/api_doc/: index.html  search.js
docs/api_doc/fluoscenepy/: fluoscene.html
project_docs/: doc_page_styles.css  project_page.html
project_docs/api_doc/: search.js
project_docs/api_doc/fluoscenepy/: fluoscene.html
src/fluoscenepy/: __init__.py  fluoscene.py  raw_objects_gen.py  run_fluoscene_as_main.py
src/fluoscenepy/case_studies/: __init__.py  case_study_generation.py
src/fluoscenepy/tests/: __init__.py  test_fluoscene.py
src/fluoscenepy/utils/: __init__.py  acc_comp_funcs.py  comp_funcs.py  compiled_objects_gen.py  raw_objects_gen.py
tests/: installation_check.py  run_fluoscene_as_main.py  test_fluoscenepy_package.py
