[project]
name = "fluoscenepy"
# version = "0.0..."  # Manual specification of the version in this file
dynamic = ["version"]  # Discovering of the version by the setuptools (see below: in the 'file' or 'attr')
authors = [
    {name = "Sergei Klykov"},
    {email = "sergej.klykow@gmail.com"}
]
description = "Simulation of a microscopic image with round (beads) and elongated fluorescent objects"
readme = "README.md"
# license = {file = "LICENSE"}  # includes the whole text in METADATA, maybe not so convenient
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]
keywords = ["fluorescent microscopic image simulation"]

[project.urls]  # METADATA in wheel file will represent the data below by using pip show zernpy -v
# The links below are mapped / parsed by the PyPi website
"Homepage" = "https://sklykov.github.io/fluoscenepy/"
"Repository" = "https://github.com/sklykov/fluoscenepy/"
"Bug Tracker" = "https://github.com/sklykov/fluoscenepy/issues/"
"Documentation" = "https://sklykov.github.io/fluoscenepy/api_doc/fluoscenepy/fluoscene.html"
"Changelog" = "https://github.com/sklykov/fluoscenepy/blob/main/CHANGELOG.md"

# [tool.setuptools.packages.find]  # Manifest.in file is only required for adding some package-data
# where = ["src"]  # there is no need to specify this here

# Below - specification of version within the package by discovering attribute in project files
[tool.setuptools.dynamic]
# version = {file = "VERSION"}  # reading the version from the plane file
version = {attr = "fluoscenepy.__version__"}  # Variable set in the __init__.py

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
